[NBF] update issue default z-index should not be modified Cause: None Solution: None Fixed Version: 2018.09.19 Branch: GVC3210 Change-Id: Ib57dc6909d04b208a5441b0ca281ede9ebb028ee Reviewed-on: https://192.168.120.246/111655 Reviewed-by: lvwanqi <wqlv@grandstream.cn> Tested-by: lvwanqi <wqlv@grandstream.cn>

--- a/webgui/gvc3200_new/src/css/frame.css
+++ b/webgui/gvc3200_new/src/css/frame.css
@@ -20,10 +20,6 @@ a, a:hover{text-decoration: none;}
     background-position: center center;
 }
 
-.ant-modal-wrap{
-    z-index: 1200;
-}
-
 .mainDiv {
     background: transparent;
     color: #EBEBEB;
@@ -6217,8 +6213,3 @@ ol.mp_list li.mp_error {}
 .hidden-modal-btn .ant-modal-footer{
     display: none;
 }
-
-
-
-
-
